--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "moments",
-  "version": "0.1.0",
+  "name": "Peppermint",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -9,6 +9,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
