--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "Peppermint",
+  "name": "peppermint",
   "version": "1.0.0",
+  "engines": { "node": "16.x" },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
