--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "peppermint",
   "version": "1.0.0",
-  "engines": { "node": "16.x" },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.19.2"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -24,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./ --ignore-path .gitignore",
+    "lint:fix": "npm run lint -- --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "msw": "^0.35.0"
+    "eslint": "^7.32.0",
+    "msw": "^0.35.0",
+    "prettier": "^2.7.1"
   }
 }
